[package]
name = "serde-encrypted-value"
version = "0.4.3"
authors = ["Steven Fackler <sfackler@palantir.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A Serde Deserializer wrapper which transparently decrypts encrypted values"
repository = "https://github.com/palantir/serde-encrypted-value"
readme = "README.md"

[dependencies]
aes-gcm = "0.10.1"
base64 = "0.13"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typenum = "1.15.0"

[dev-dependencies]
tempfile = "3.0"
